# zerolog

./: Cargo.toml  LICENSE.txt
src/: level.rs  lib.rs  log_attr.rs  logs.rs  main.rs  spans.rs
