[package]
name = "zerolog"
version = "0.2.3"
edition = "2021"
authors = ["Patrick Lorio <patrick@methods.dev>"]
description = "Simple low overhead easy to disable logging"
repository = "https://github.com/Developed-Methods/zerolog"
license = "BSD-2-Clause"
license-file = "LICENSE.txt"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
chrono = "0.4"

[[bin]]
name = "main"
path = "src/main.rs"
